--- a/css/style.css
+++ b/css/style.css
@@ -1,399 +1,211 @@
-/* importing google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-label {
-  display: block;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+
 body {
-  background: #007bff;
-}
-
-::selection {
-  color: #fff;
-  background: #007bff;
-}
-
-.start_btn,
-.info_box,
-.quiz_box,
-.result_box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.info_box.activeInfo,
-.quiz_box.activeQuiz,
-.result_box.activeResult {
-  opacity: 1;
-  z-index: 5;
-  pointer-events: auto;
-  transform: translate(-50%, -50%) scale(1);
-}
-
-.result_box.activeResult {
-  width: 100%;
-  height: 100vh;
-}
-
-.start_btn button {
-  font-size: 25px;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  line-height: 1.7;
+  color: #1c1d1f;
+  background-color: #f0f0f0;
   font-weight: 500;
-  color: #007bff;
-  padding: 15px 30px;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  background: #fff;
+}
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  max-width: 1140px;
+}
+a {
+  color: #8ca086;
+  text-decoration: none;
+}
+a:hover {
+  color: #6f8669;
+  text-decoration: none;
+}
+.btn {
+  transition: all 0.2s ease-in-out;
   cursor: pointer;
-}
-
-.info_box {
-  width: 540px;
-  background: #fff;
-  border-radius: 5px;
-  transform: translate(-50%, -50%) scale(0.9);
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s ease;
-}
-
-.info_box .info-title {
-  height: 60px;
-  width: 100%;
-  border-bottom: 1px solid lightgrey;
-  display: flex;
-  align-items: center;
-  padding: 0 30px;
-  border-radius: 5px 5px 0 0;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.info_box .info-list {
-  padding: 15px 30px;
-}
-
-.info_box .info-list .info {
-  margin: 5px 0;
-  font-size: 17px;
-}
-
-.info_box .info-list .info span {
-  font-weight: 600;
-  color: #007bff;
-}
-.info_box .buttons {
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 0 30px;
-  border-top: 1px solid lightgrey;
-}
-
-.info_box .buttons button {
-  margin: 0 5px;
-  height: 40px;
-  width: 100px;
-  font-size: 16px;
-  font-weight: 500;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  border-radius: 5px;
-  border: 1px solid #007bff;
-  transition: all 0.3s ease;
-}
-
-.quiz_box {
-  width: 550px;
-  background: #fff;
-  border-radius: 5px;
-  transform: translate(-50%, -50%) scale(0.9);
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s ease;
-}
-
-.quiz_box header {
-  position: relative;
-  z-index: 2;
-  height: 70px;
-  padding: 0 30px;
-  background: #fff;
-  border-radius: 5px 5px 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.1);
-}
-
-.quiz_box header .title {
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.quiz_box header .timer {
-  color: #004085;
-  background: #cce5ff;
-  border: 1px solid #b8daff;
-  height: 45px;
-  padding: 0 8px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 145px;
-}
-
-.quiz_box header .timer .time_left_txt {
+  line-height: 1.8;
   font-weight: 400;
-  font-size: 17px;
-  user-select: none;
+  font-size: 1rem;
+  padding: 0.375rem 0.75rem;
+  border-radius: 4px;
 }
-
-.quiz_box header .timer .timer_sec {
-  font-size: 18px;
-  font-weight: 500;
-  height: 30px;
-  min-width: 45px;
-  margin-left: 5px;
-  padding: 0 5px;
+.btn-check:focus+.btn, .btn:focus {
+  outline: 0;
+  box-shadow: none;
+}
+.primaryBtn {
   color: #fff;
-  border-radius: 5px;
-  line-height: 30px;
-  text-align: center;
-  background: #343a40;
-  border: 1px solid #343a40;
-  user-select: none;
+  background-color: #6f8669;
+  border: 1px solid #6f8669;
 }
-
-.quiz_box header .time_line {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  height: 3px;
-  background: #007bff;
-  transition: all 1s;
+.primaryBtn:hover {
+  color: #fff;
+  background-color: #89a382;
+  border: 1px solid #89a382;
 }
-
-section {
-  padding: 25px 30px 20px 30px;
+.secondaryBtn {
+  color: #1c1d1f;
+  background-color: #f1efef;
+  border: 1px solid #f1efef;
+}
+.secondaryBtn:hover {
+  color: #1c1d1f;
+  background-color: #eae9e9;
+}
+img {
+  width: 100%;
+}
+.full-width {
+  width: 100%;
+}
+/* navbar */
+.navbar {
+  box-shadow: 0 1px 3px rgb(0 0 0 / 10%);
+  height: 75px;
   background: #fff;
 }
-
-section .que_text {
-  font-size: 25px;
-  font-weight: 600;
+.navbar-brand {
+  width: 90px;
 }
-
-section .option_list {
-  padding: 20px 0px;
-  display: block;
-}
-
-section .option_list .option {
-  background: aliceblue;
-  border: 1px solid #84c5fe;
-  border-radius: 5px;
-  padding: 8px 15px;
-  font-size: 17px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-section .option_list .option:last-child {
-  margin-bottom: 0px;
-}
-
-section .option_list .option:hover {
-  color: #004085;
-  background: #cce5ff;
-  border: 1px solid #b8daff;
-}
-
-/* section .option_list .option.correct {
-  color: #155724;
-  background: #d4edda;
-  border: 1px solid #c3e6cb;
-}
-
-section .option_list .option.incorrect {
-  color: #721c24;
-  background: #f8d7da;
-  border: 1px solid #f5c6cb;
-} */
-
-section .option_list .option.disabled {
-  pointer-events: none;
-}
-
-/* section .option_list .option .icon {
-  height: 26px;
-  width: 26px;
-  border: 2px solid transparent;
-  border-radius: 50%;
-  text-align: center;
-  font-size: 13px;
-  pointer-events: none;
-  transition: all 0.3s ease;
-  line-height: 24px;
-} */
-/* .option_list .option .icon.tick {
-  color: #23903c;
-  border-color: #23903c;
-  background: #d4edda;
-}
-
-.option_list .option .icon.cross {
-  color: #a42834;
-  background: #f8d7da;
-  border-color: #a42834;
-} */
-
-footer {
-  height: 60px;
-  padding: 0 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-top: 1px solid lightgrey;
-}
-
-footer .total_que span {
-  display: flex;
-  user-select: none;
-}
-
-footer .total_que span p {
+.nav-link {
   font-weight: 500;
-  padding: 0 5px;
 }
 
-footer .total_que span p:first-child {
-  padding-left: 0px;
+/* home-page */
+
+.home-page {
+  background-color: #eefef0;
+  max-height: 100vh;
+  overflow: hidden;
+  width: 100%;
 }
 
-footer button {
-  height: 40px;
-  padding: 0 13px;
-  font-size: 18px;
-  font-weight: 400;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  color: #fff;
-  border-radius: 5px;
-  background: #007bff;
-  border: 1px solid #007bff;
-  line-height: 10px;
-  opacity: 0;
+
+.quiz-link-disable{
   pointer-events: none;
-  transform: scale(0.95);
-  transition: all 0.3s ease;
 }
-
-footer button:hover {
-  background: #0263ca;
-}
-
-footer button.show {
-  opacity: 1;
-  pointer-events: auto;
-  transform: scale(1);
-}
-
-.result_box {
-  background: #fff;
-  border-radius: 5px;
+.hero {
   display: flex;
-  padding: 25px 30px;
-  width: 450px;
-  align-items: center;
   flex-direction: column;
   justify-content: center;
-  transform: translate(-50%, -50%) scale(0.9);
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s ease;
 }
 
-.result_box .icon {
-  font-size: 100px;
-  color: #007bff;
-  margin-bottom: 10px;
+
+.hero-title {
+  color: #6f9177;
+  font-weight: 700;
+  font-size: 5rem;
+  line-height: 1.3;
+}
+.hero-des {
+  font-size: 1.5rem;
+  color: #99b5a0;
+  font-weight: 400;
+}
+.home-img {
+  background-color: #eefef0;
+  margin: 0 auto;
 }
 
-.result_box .complete_text {
-  font-size: 20px;
-  font-weight: 500;
-}
+/* login */
 
-.result_box .score_text span {
-  display: flex;
-  margin: 10px 0;
-  font-size: 18px;
-  font-weight: 500;
+.card {
+  position: relative;
+  min-width: 0;
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 4px !important;
+  overflow: hidden;
+  border: 1px solid #dbdbdb;
 }
-
-.result_box .score_text span p {
-  padding: 0 4px;
-  font-weight: 600;
+.login-card-header {
+  padding: 0.75rem 1.25rem;
+  font-size: 24px;
+  text-align: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
-
-.result_box .buttons {
-  display: flex;
-  margin: 20px 0;
+.form-group {
+  margin-bottom: 1rem;
 }
-
-.result_box .buttons button {
-  margin: 0 10px;
-  height: 45px;
-  padding: 0 20px;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  border: none;
+.form-control {
+  line-height: 25px;
   outline: none;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 4px;
+  width: 100%;
+  border: 2px solid #dee2e6;
+}
+.form-control:focus {
+  border-color: #4dabf7;
+  outline: none;
+  box-shadow: inset 0 1px 1px rgb(0 0 0 / 1%), 0 0 8px rgb(34 139 230 / 50%);
+  border-width: 2px;
+}
+.checkbox {
+  display: none;
+}
+.avatar {
+  border: 2px solid #dee2e6;
   border-radius: 5px;
-  border: 1px solid #007bff;
-  transition: all 0.3s ease;
+  padding: 10px;
+  margin: 5px;
+  width: 80px;
+  cursor: pointer;
+}
+.checkbox:checked ~ .avatar {
+  border: 2px solid #89a382;
 }
 
-.buttons button.restart {
-  color: #fff;
-  background: #007bff;
+/* dashboard */
+
+.page-header {
+  background: #eefef0;
+  height: 150px;
 }
 
-.buttons button.restart:hover {
-  background: #0263ca;
-}
 
-.buttons button.quit {
-  color: #007bff;
-  background: #fff;
-}
-
-.buttons button.quit:hover {
-  color: #fff;
-  background: #007bff;
-}
-
-.inputDel {
-  visibility: hidden;
-}
-
-.inputDel:checked + label {
-  background-color: #cce5ff;
+/* @media (max-width: 1400px)
+ { ... }
+ @media (max-width: 1200px) 
+ { ... }
+ @media (max-width: 992px) 
+ { ... } */
+/* @media (max-width: 768px) 
+ { ... } */
+@media (max-width: 576px) {
+  html {
+    font-size: 10px;
+  }
+  .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  
+  /* .main-header.box-shadow-header.floaty {
+    background: #06162d;
+  }
+  .logofot {
+    text-align: center;
+    justify-content: center;
+    display: flex;
+  }
+  .hedfot {
+    height: 33px;
+    display: flex;
+    margin: 0 auto;
+  }
+  .hedfot {
+    font-size: 30px;
+  }
+  .afot, .afot:hover {
+    color: #fff;
+    font-size: 13px;
+} */
 }
