--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 body {
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-  line-height: 1.7;
-  color: #1c1d1f;
-  background-color: #f0f0f0;
-  font-weight: 500;
+	font-family: "Roboto", sans-serif;
+	font-size: 15px;
+	line-height: 1.7;
+	color: #1c1d1f;
+	background-color: #f0f0f0;
+	font-weight: 500;
 }
 .container,
 .container-lg,
@@ -14,198 +14,521 @@ body {
 .container-sm,
 .container-xl,
 .container-xxl {
-  max-width: 1140px;
+	max-width: 1140px;
 }
 a {
-  color: #8ca086;
-  text-decoration: none;
+	color: #8ca086;
+	text-decoration: none;
 }
 a:hover {
-  color: #6f8669;
-  text-decoration: none;
+	color: #6f8669;
+	text-decoration: none;
+}
+h3 {
+	margin-bottom: 30px;
+	font-size: 25px;
+}
+ul {
+	list-style: none;
+}
+.white {
+	color: #ffffff;
+}
+.white:hover {
+	color: #ffffff;
+}
+.email-error,
+.check {
+	color: red;
+	padding: 7px 0px 0px;
+	text-transform: capitalize;
 }
 .btn {
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-  line-height: 1.8;
-  font-weight: 400;
-  font-size: 1rem;
-  padding: 0.375rem 0.75rem;
-  border-radius: 4px;
+	transition: all 0.2s ease-in-out;
+	cursor: pointer;
+	line-height: 1.8;
+	font-weight: 400;
+	font-size: 1rem;
+	padding: 0.375rem 0.75rem;
+	border-radius: 4px;
 }
-.btn-check:focus+.btn, .btn:focus {
-  outline: 0;
-  box-shadow: none;
+.btn-check:focus + .btn,
+.btn:focus {
+	outline: 0;
+	box-shadow: none;
 }
 .primaryBtn {
-  color: #fff;
-  background-color: #6f8669;
-  border: 1px solid #6f8669;
+	color: #fff;
+	background-color: #6f8669;
+	border: 2px solid #6f8669;
 }
 .primaryBtn:hover {
-  color: #fff;
-  background-color: #89a382;
-  border: 1px solid #89a382;
-}
-.secondaryBtn {
-  color: #1c1d1f;
-  background-color: #f1efef;
-  border: 1px solid #f1efef;
-}
-.secondaryBtn:hover {
-  color: #1c1d1f;
-  background-color: #eae9e9;
-}
-img {
-  width: 100%;
-}
-.full-width {
-  width: 100%;
-}
-/* navbar */
-.navbar {
-  box-shadow: 0 1px 3px rgb(0 0 0 / 10%);
-  height: 75px;
-  background: #fff;
-}
-.navbar-brand {
-  width: 90px;
-}
-.nav-link {
-  font-weight: 500;
+	color: #fff;
+	background-color: #89a382;
+	border: 2px solid #89a382;
 }
 
+.borderBtn {
+	color: #000;
+	border: 2px solid #727472;
+}
+.borderBtn:hover {
+	color: #000;
+	background-color: #f7faf6;
+	border: 2px solid #6f8669;
+}
+
+.secondaryBtn {
+	color: #1c1d1f;
+	background-color: #f1efef;
+	border: 2px solid #f1efef;
+}
+.secondaryBtn:hover {
+	color: #1c1d1f;
+	background-color: #eae9e9;
+}
+img {
+	width: 100%;
+}
+.full-width {
+	width: 100%;
+}
+.dm-flex {
+	display: none;
+}
+/* footer */
+
+footer {
+	background: #404040;
+	margin-top: 50px;
+}
+.link {
+	color: #fff;
+	font-weight: 300;
+	margin-right: 10px;
+}
+.footer-link {
+	padding: 10px 0px;
+}
+section.Login {
+	min-height: 550px;
+}
+footer {
+	display: block;
+}
+/* navbar */
+.floaty-bar {
+	display: none;
+}
+.navbar-nav {
+	flex-direction: row;
+}
+.navbar {
+	box-shadow: 0 1px 3px rgb(0 0 0 / 10%);
+	height: 75px;
+	background: #fff;
+}
+.navbar-brand {
+	width: 90px;
+}
+.nav-link {
+	font-weight: 500;
+}
+.inputRadio {
+	display: none;
+}
 /* home-page */
 
 .home-page {
-  background-color: #eefef0;
-  max-height: 100vh;
-  overflow: hidden;
-  width: 100%;
+	background-color: #eefef0;
+	width: 100%;
 }
-
-
-.quiz-link-disable{
-  pointer-events: none;
+.btn-width {
+	width: 150px;
 }
 .hero {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
-
-
 .hero-title {
-  color: #6f9177;
-  font-weight: 700;
-  font-size: 5rem;
-  line-height: 1.3;
+	color: #6f9177;
+	font-weight: 700;
+	font-size: 5rem;
+	line-height: 1.3;
 }
 .hero-des {
-  font-size: 1.5rem;
-  color: #99b5a0;
-  font-weight: 400;
+	font-size: 1.5rem;
+	color: #99b5a0;
+	font-weight: 400;
 }
 .home-img {
-  background-color: #eefef0;
-  margin: 0 auto;
+	background-color: #eefef0;
+	margin: 0 auto;
 }
 
 /* login */
 
 .card {
-  position: relative;
-  min-width: 0;
-  padding: 2rem;
-  background-color: #fff;
-  border-radius: 4px !important;
-  overflow: hidden;
-  border: 1px solid #dbdbdb;
+	position: relative;
+	min-width: 0;
+	padding: 1rem 2rem;
+	background-color: #fff;
+	border-radius: 4px !important;
+	overflow: hidden;
+	border: 1px solid #dbdbdb;
 }
 .login-card-header {
-  padding: 0.75rem 1.25rem;
-  font-size: 24px;
-  text-align: center;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+	padding: 0.75rem 1.25rem;
+	font-size: 24px;
+	text-align: center;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 .form-group {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 .form-control {
-  line-height: 25px;
-  outline: none;
-  font-size: 15px;
-  font-weight: 500;
-  border-radius: 4px;
-  width: 100%;
-  border: 2px solid #dee2e6;
+	line-height: 25px;
+	outline: none;
+	font-size: 15px;
+	font-weight: 500;
+	border-radius: 4px;
+	width: 100%;
+	border: 2px solid #dee2e6;
 }
 .form-control:focus {
-  border-color: #4dabf7;
-  outline: none;
-  box-shadow: inset 0 1px 1px rgb(0 0 0 / 1%), 0 0 8px rgb(34 139 230 / 50%);
-  border-width: 2px;
+	border-color: #4dabf7;
+	outline: none;
+	box-shadow: inset 0 1px 1px rgb(0 0 0 / 1%), 0 0 8px rgb(34 139 230 / 50%);
+	border-width: 2px;
 }
 .checkbox {
-  display: none;
+	display: none;
 }
 .avatar {
-  border: 2px solid #dee2e6;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 5px;
-  width: 80px;
-  cursor: pointer;
+	border: 2px solid #dee2e6;
+	border-radius: 5px;
+	padding: 10px;
+	margin: 5px;
+	width: 80px;
+	cursor: pointer;
 }
 .checkbox:checked ~ .avatar {
-  border: 2px solid #89a382;
+	border: 2px solid #89a382;
 }
 
 /* dashboard */
-
-.page-header {
-  background: #eefef0;
-  height: 150px;
+.dashboard-header {
+	background: #eefef0;
+}
+.dashboard-img {
+	height: 80px;
+	width: 80px;
+	margin-right: 20px;
 }
 
+.dashboard-header {
+	padding: 30px;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 0 4px 8px 0 #dcdee1;
+	margin-bottom: -101px;
+	justify-content: space-around;
+	align-items: center;
+}
+.dashboard-title {
+	color: #6e8868;
+	font-size: 30px;
+	font-weight: 700;
+	text-align: center;
+}
+.dashboard-des {
+	font-size: 15px;
+	font-weight: 400;
+	text-align: center;
+}
+.quizes-title {
+	margin-top: 120px;
+	text-align: center;
+	justify-content: center;
+}
+.quize-bold {
+	font-weight: 700;
+	font-size: 50px;
+	line-height: 1.3;
+}
+.quize-des {
+	font-weight: 300;
+	font-size: 20px;
+	margin-bottom: 50px;
+}
+.quizes-padding {
+	padding: 0 30px 60px;
+}
+.box_grid:hover {
+	box-shadow: 0 4px 8px 0 #dcdee1;
+	transition: all 0.5s ease;
+	transform: translateY(-5px);
+}
+.box_grid {
+	background-color: #fff;
+	display: block;
+	position: relative;
+	margin-bottom: 30px;
+	border-radius: 5px;
+	box-shadow: 0 2px 4px 0 rgb(184 184 184 / 50%);
+	border-radius: 8px;
+	transition: all 0.5s ease;
+}
+.box_grid ul {
+	padding: 10px 15px 12px;
+	border-top: 3px solid #e8e3e3;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: #4b5049;
+	font-weight: 400;
+	text-align: center;
+}
+.box_grid > img {
+	border-radius: 5px 5px 0px 0px;
+	height: 250px;
+	object-fit: cover;
+}
+.card-title {
+	padding: 15px;
+}
+.result_img {
+	height: 250px;
+}
+/* quiz */
+.page-header {
+	background: #d1e0d3;
+}
+.page-header-text {
+	padding: 50px 30px;
+	font-size: 25px;
+	line-height: 1.3;
+}
+.inner-page {
+	padding: 30px;
+}
 
-/* @media (max-width: 1400px)
- { ... }
- @media (max-width: 1200px) 
- { ... }
- @media (max-width: 992px) 
- { ... } */
-/* @media (max-width: 768px) 
- { ... } */
+.timer {
+	font-size: 30px;
+	color: #6d8967;
+}
+.startOver {
+	justify-content: flex-end;
+	display: flex;
+	align-items: flex-end;
+}
+.time_line {
+	border: 3px solid #a9bda5;
+	margin: 20px 0;
+	background-color: #a9bda5;
+}
+
+.questions {
+	margin-top: 50px;
+}
+.quistion {
+	font-size: 20px;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+.answer {
+	padding: 10px 0px 0 0;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+}
+.question-btn {
+	padding: 10px;
+	background: #cccbcb;
+	margin-bottom: 10px;
+	max-width: 150px;
+	text-align: center;
+	text-transform: capitalize;
+}
+.answered {
+	background: #4ccc5c;
+	color: #fff;
+}
+label {
+	background: #ffffff;
+	border-radius: 5px;
+}
+.answer > label {
+	padding: 10px;
+}
+input:checked + label {
+	background-color: #d4edda;
+}
+.quiz-container .bullets {
+	align-items: center;
+	display: flex;
+	padding: 0.5rem;
+}
+.quiz-container .bullets .spans {
+	flex: 1;
+	display: flex;
+}
+.quiz-container .bullets .spans span {
+	width: 1.1rem;
+	height: 1.1rem;
+	background-color: #b2c9ac;
+	margin-right: 0.2rem;
+	border-radius: 50%;
+}
+.quiz-container .bullets .spans span.active-question {
+	background-color: #6f8669;
+}
+/* ruselt */
+.q-box {
+	background: #555;
+	padding: 10px 15px;
+	margin-right: 5px;
+	cursor: pointer;
+}
+.padding-30 {
+	padding: 0 40px 50px;
+}
+.wrong {
+	background-color: #d37b7b;
+}
+/* score */
+
+.img-score {
+	max-width: 400px;
+	margin: 0 auto;
+}
+.percent-score {
+	text-align: center;
+	font-size: 80px;
+	font-weight: 700;
+	line-height: 1.3;
+	margin-top: 30px;
+}
+.bad,
+.error {
+	color: red;
+}
+.good {
+	color: green;
+}
+.resultLabel {
+	display: block;
+	padding: 10px;
+}
+.title-score {
+	font-size: 25px;
+	text-align: center;
+}
+.score-btn {
+	text-align: center;
+	margin-top: 30px;
+}
+@media (max-width: 768px) {
+	.dm-none {
+		display: none;
+	}
+	.info_box.activeInfo,
+	.result_box.activeResult {
+		width: 90%;
+		margin: 10px auto;
+	}
+	.info_box {
+		width: 90%;
+	}
+	.result_box .buttons {
+		width: 100%;
+	}
+	.result_box {
+		width: 90%;
+	}
+}
 @media (max-width: 576px) {
-  html {
-    font-size: 10px;
-  }
-  .hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-  }
-  
-  /* .main-header.box-shadow-header.floaty {
-    background: #06162d;
-  }
-  .logofot {
-    text-align: center;
-    justify-content: center;
-    display: flex;
-  }
-  .hedfot {
-    height: 33px;
-    display: flex;
-    margin: 0 auto;
-  }
-  .hedfot {
-    font-size: 30px;
-  }
-  .afot, .afot:hover {
-    color: #fff;
-    font-size: 13px;
-} */
+	.page-header-text,
+	.inner-page {
+		padding: 40px 10px;
+	}
+	.largeDiv {
+		grid-template-columns: repeat(1, 1fr);
+	}
+	.padding-30 {
+		padding: 0 20px 50px;
+	}
+	.quizes-padding {
+		padding: 0 10px 50px;
+	}
+	.hero {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		text-align: center;
+	}
+	.card {
+		padding: 1rem;
+	}
+	.ds-none {
+		display: none;
+	}
+
+	.dm-flex {
+		display: flex;
+		margin-top: 15px;
+		justify-content: space-around;
+	}
+	.dashboard-header,
+	.flex-col {
+		flex-direction: column;
+	}
+	.dashboard-img {
+		margin-right: 0px;
+	}
+	.dashboard-center {
+		margin: 0 auto;
+	}
+	.hero-title {
+		font-size: 45px;
+	}
+	.hero-des {
+		font-size: 18px;
+	}
+
+	.floaty-bar {
+		display: block;
+		margin-top: 40px;
+	}
+	.floaty {
+		background: #6f9177;
+		position: fixed;
+		bottom: 0px;
+		width: 100%;
+	}
+	.navbar {
+		box-shadow: 0 1px 3px rgb(0 0 0 / 10%);
+		height: 65px;
+		background: #fff;
+	}
+	.footer {
+		color: #fff;
+		padding: 10px 0px;
+		justify-content: space-around;
+	}
+	.border {
+		height: 20px;
+		border: 1px solid #f3f9f445 !important;
+	}
+	.btn-width {
+		width: 70%;
+		margin: 0 auto;
+	}
+	.navbar-nav {
+		display: none;
+	}
+	footer {
+		display: none;
+	}
 }
